UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Sales_Reps_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Annual__c</fullName>
        <label>Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_1__c</fullName>
        <label>Quarter 1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_2__c</fullName>
        <label>Quarter 2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_3__c</fullName>
        <label>Quarter 3</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <label>Regional Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRx_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRx Target</label>
        <referenceTo>SRx_Target__c</referenceTo>
        <relationshipLabel>Sales Reps Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Reps Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Name__c</columns>
        <columns>SRx_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Sales Rep Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Reps Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>